sidebar_ui: Fix flickering of invite users button when showing sidebar.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -2430,6 +2430,10 @@ select.invite-as {
     @extend %hide-right-sidebar;
 }
 
+.hide-right-sidebar-by-visibility .app-main .column-right {
+    visibility: hidden;
+}
+
 @media (width < $xl_min) {
     .default-sidebar-behaviour {
         @extend %hide-right-sidebar;
